@@ -127,14 +127,6 @@ This specifies the character set used for the filesystem.  A list of supported
 character sets can be obtained by running "iconv \-l".  The default is
 determined from the locale when the db was originally created.
 .TP
-.B gapless_mp3_playback <yes or no>
-This specifies whether to support gapless playback of MP3s which have the
-necessary headers.  Useful if your MP3s have headers with incorrect
-information.  If you have such MP3s, it is highly recommended that you fix them
-using vbrfix (available from <http://www.willwap.co.uk/Programs/vbrfix.php>)
-instead of disabling gapless MP3 playback.  The default is to support gapless
-MP3 playback.
-.TP
 .B save_absolute_paths_in_playlists <yes or no>
 This specifies whether relative or absolute paths for song filenames are used
 when saving playlists.  The default is "no".
