@@ -68,7 +68,7 @@ const ConfigTemplate config_param_templates[] = {
 	{ "id3v1_encoding", false, true },
 	{ "metadata_to_use" },
 	{ "save_absolute_paths_in_playlists" },
-	{ "gapless_mp3_playback" },
+	{ "gapless_mp3_playback", false, true },
 	{ "auto_update" },
 	{ "auto_update_depth" },
 	{ "despotify_user", false, true },
